--- a/Home.html
+++ b/Home.html
@@ -11,10 +11,10 @@
         <nav class="navbar">
             <div class="brand">Pranav Shelake</div>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Resume</a></li>
+                <li><a href="Home.css">Home</a></li>
+                <li><a href="https://drive.google.com/file/d/1N9YELfTr1W685TrDF40smUd3cefMtQFR/view?usp=sharing" target="_blank">Resume</a></li>
                 <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contactme.html">Contact</a></li>
             </ul>
         </nav>
     </header>
