--- a/contactme.html
+++ b/contactme.html
@@ -12,9 +12,9 @@
         <nav class="navbar">
             <div class="brand">Pranav Shelake</div>
             <ul>
-                <li><a href="Home.css">Home</a></li>
+                <li><a href="Home.html">Home</a></li>
                 <li><a href="https://drive.google.com/file/d/1N9YELfTr1W685TrDF40smUd3cefMtQFR/view?usp=sharing" target="_blank">Resume</a></li>
-                <li><a href="#">Projects</a></li>
+                <li><a href="project.html">Projects</a></li>
                 <li><a href="contactme.html">Contact</a></li>
             </ul>
         </nav>
@@ -24,7 +24,6 @@
     <p>✉️ Email: pranavshelake99@gmail.com</p>
     <p> 📱 Phone: +918249816651</p>
     <p> <a href="https://www.linkedin.com/in/pranav-shelake-bb84412ab/" target="_blank">🔗 Linkedin</a></p>
-    <!-- Add more contact information as needed -->
   </div>
 </body>
 </html>
