change the ball color and change the old resume link to word file

--- a/project.html
+++ b/project.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
     <link rel="stylesheet" href="project.css"> <!-- Link to your CSS file for styling -->
+    <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
     <header>
@@ -12,7 +13,7 @@
             <div class="brand">Pranav Shelake</div>
             <ul>
                 <li><a href="Home.html">Home</a></li>
-                <li><a href="https://drive.google.com/file/d/1N9YELfTr1W685TrDF40smUd3cefMtQFR/view?usp=sharing" target="_blank">Resume</a></li>
+                <li><a href="https://docs.google.com/document/d/1KRTLlqHq_5dL3z9yB4mPgOaGX9InBjo9de3Ela7npQg/edit?usp=sharing" target="_blank">Resume</a></li>
                 <li><a href="project.html">Projects</a></li>
                 <li><a href="contactme.html">Contact</a></li>
             </ul>
@@ -50,8 +51,6 @@
             I am Pranav Shelake, a third-year student at Kolhapur Institute of Technology's College of Engineering, Kolhapur, pursuing Computer Science & Engineering (CSE). I enjoy working on a variety of projects. Adaptable and able to work well under pressure. Personality with strong interpersonal skills.
         </p>
     </section>
-    
-
     <footer class="footer">
         <p style="font-size: 20px;">You can reach out to me at :</p>
         <div class="contact-info">
@@ -60,11 +59,5 @@
             <div class="linkedin"> <a href="https://www.linkedin.com/in/pranav-shelake-bb84412ab/" target="_blank">🔗 Linkedin</a></div>
         </div>
     </footer>
-
-    <script>
-        function openProjectPage() {
-            window.location.href = 'project.html'; // Link to the project page
-        }
-    </script>
 </body>
 </html>
