--- a/Home.html
+++ b/Home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pranav Shelake</title>
     <link rel="stylesheet" href="Home.css"> <!-- Link to your CSS file for styling -->
+    <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
     <header>
@@ -12,7 +13,7 @@
             <div class="brand">Pranav Shelake</div>
             <ul>
                 <li><a href="Home.html">Home</a></li>
-                <li><a href="https://drive.google.com/file/d/1N9YELfTr1W685TrDF40smUd3cefMtQFR/view?usp=sharing" target="_blank">Resume</a></li>
+                <li><a href="https://docs.google.com/document/d/1KRTLlqHq_5dL3z9yB4mPgOaGX9InBjo9de3Ela7npQg/edit?usp=sharing" target="_blank">Resume</a></li>
                 <li><a href="project.html">Projects</a></li>
                 <li><a href="contactme.html">Contact</a></li>
             </ul>
@@ -73,11 +74,12 @@
             window.location.href = 'project.html'; // Link to the project page
         }
         function Resume() {
-        window.open("https://drive.google.com/file/d/1N9YELfTr1W685TrDF40smUd3cefMtQFR/view?usp=sharing", "_blank"); // Open link in new tab
+        window.open("https://docs.google.com/document/d/1KRTLlqHq_5dL3z9yB4mPgOaGX9InBjo9de3Ela7npQg/edit?usp=sharing", "_blank");
         }
         function Contact() {
             window.location.href = 'contactme.html'; // Link to the project page
         }
+        
     </script>
 </body>
 </html>
