--- a/contactme.html
+++ b/contactme.html
@@ -6,6 +6,7 @@
   <title>Contact Us</title>
   <link rel="stylesheet" href="contactme.css"> 
   <link rel="stylesheet" href="Home.css">
+  <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
     <header>
@@ -13,7 +14,7 @@
             <div class="brand">Pranav Shelake</div>
             <ul>
                 <li><a href="Home.html">Home</a></li>
-                <li><a href="https://drive.google.com/file/d/1N9YELfTr1W685TrDF40smUd3cefMtQFR/view?usp=sharing" target="_blank">Resume</a></li>
+                <li><a href="https://docs.google.com/document/d/1KRTLlqHq_5dL3z9yB4mPgOaGX9InBjo9de3Ela7npQg/edit?usp=sharing" target="_blank">Resume</a></li>
                 <li><a href="project.html">Projects</a></li>
                 <li><a href="contactme.html">Contact</a></li>
             </ul>
